<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".User.FeedbackActivity">


    <EditText
        android:id="@+id/TopicFA"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="40dp"
        android:paddingStart="10dp"
        android:background="@drawable/edt_name_desgin"
        android:ems="10"
        android:textColor="@color/black"
        android:textColorHint="#5D5C5C"
        android:hint="@string/Topic"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/EmailFA"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:textColor="@color/black"
        android:textColorHint="#5D5C5C"
        android:paddingStart="10dp"
        android:hint="@string/Email_Address"
        android:layout_marginTop="40dp"
        android:background="@drawable/edt_name_desgin"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textEmailAddress"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/FeedbackMsgFA"
        android:layout_width="401dp"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/edt_name_desgin"
        android:ems="10"
        android:hint="@string/feedback"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/sendFA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/white"
        android:text="Send Mesaage " />
</LinearLayout>